# vaultsend

./: .gitignore  CHANGES.md  Makefile  PROVENANCE.md  README.md  SECURITY.md  VaultSend_offline.html  install.sh  settings.gradle.kts  verify.sh
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/org/vaultsend/: Backend.kt  Contacts.kt
app/src/main/java/org/vaultsend/ui/: App.kt  AppViewModel.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
appimage/: .gitignore  README-APPIMAGE.md  build-appimage.sh
appimage/AppDir.template/: AppRun  vaultsend.desktop
backend/: Cargo.toml  THIRD_PARTY_LICENSES.html  about.toml
backend/src/: main.rs
frontend/: app.py
rust/: Cargo.toml  THIRD_PARTY_LICENSES.html  about.toml
rust/src/: backend.rs
vaultsend/: .gitignore  build-rust.sh  build.gradle.kts
vaultsend/app/: build.gradle.kts  proguard-rules.pro
vaultsend/app/src/main/java/org/vaultsend/: BackendException.kt  Contacts.kt  MainActivity.kt  VaultSendNative.kt
vaultsend/app/src/main/java/org/vaultsend/ui/: Dialogs.kt  Screens.kt  Theme.kt
vaultsend/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
vaultsend/app/src/main/res/xml/: backup_rules.xml
vaultsend/rust/: Cargo.toml
vaultsend/rust/src/: ffi.rs  lib.rs
