[package]
name = "vaultsend"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "vaultsend"
# cdylib -> the libvaultsend.so loaded by the Android app via System.loadLibrary.
# rlib  -> lets `cargo test` exercise the pure core logic on the host.
crate-type = ["cdylib", "rlib"]

[dependencies]
# age (str4d/rage) — the only cryptographic dependency, exactly as on desktop.
# `armor` enables the ASCII-armored copy/paste text path. We touch no crypto.
age = { version = "0.11", features = ["armor"] }

# Explicit zeroizing of intermediate secret buffers (passphrase bytes, decrypted
# key text), so they are wiped from memory on drop rather than left in freed heap.
zeroize = "1"

# JNI glue between the Kotlin UI and this library. This is the entire FFI surface;
# it replaces the desktop build's argv/stdin/stdout/pipe plumbing.
jni = "0.21"

# Pinned to the last edition-2021 release: zeroize_derive 1.5.0+ requires edition
# 2024 (Rust >= 1.85) and would break the 1.75 MSRV. Comes in via zeroize's derive
# feature, not age's i18n crates; drop the pin if the MSRV ever moves to 1.85.
zeroize_derive = "=1.4.2"

[profile.release]
opt-level = "z"
lto = true
strip = true
# NOTE: unlike the desktop binary we do NOT set `panic = "abort"`. This library is
# loaded into the JVM; unwinding must stop at the FFI boundary (each JNI entry
# point catches its own errors and throws a Java exception) rather than aborting
# the whole app process.
